--- a/app/views/users/dashboard/show.html.erb
+++ b/app/views/users/dashboard/show.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
   <div class="text-end mt-3">
-    <button class="btn btn-light avatar">Avatar</button>
+    <%= image_tag current_user.avatar.image_url, class: 'avatar' if current_user.avatar&.image_url.present?  %>
     <span><%= current_user.user_name %></span>
     <%= link_to 'Sign out', sign_out_path, data: { turbo_method: :delete , turbo_confirm: 'Are you sure?'} %>
   </div>
 </div>
+<%= form_with url: '/avatars', method: :post do |form| %>
+  <%= form.file_field :image %>
+  <%= form.submit 'save' %>
+<% end %>
 
 <style>
   .avatar {
